@@ -2,4 +2,4 @@ FROM openjdk:14-slim
 
 COPY ./out/server/assembly/dest/out.jar /opt/server.jar
 
-ENTRYPOINT ["java", "-jar", "/opt/server.jar"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseZGC", "-jar", "/opt/server.jar"]
